Create index styles

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:html": "jade src/index.jade -o dist",
+    "build:html": "jade src/*.jade -o dist",
     "build:css": "node-sass src/index.sass -o dist",
     "build": "npm run build:html & npm run build:css",
-    "watch:html": "jade -w src/index.jade -o dist",
+    "watch:html": "jade -w src/*.jade -o dist",
     "watch:css": "node-sass -w src/index.sass -o dist",
     "watch": "npm run watch:html & npm run watch:css"
   },
